--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 PROJECT(ChessGame)
 
 SET(CMAKE_CXX_STANDARD 20)
-SET(CMAKE_CXX_REQUIRED ON)
+SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 
 IF (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
@@ -45,11 +45,11 @@ ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
 
 # Include Lib headers (Like SDL)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib/SDL2/include)
-
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
-TARGET_SOURCES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib/pugixml/pugixml.cpp)
-
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/code)
+
+ADD_SUBDIRECTORY(lib/nlohmann_json)
+SET(JSON_LIB "nlohmann_json::nlohmann_json")
 
 # Resources for copying them into Binary DIR
 SET(ASSETS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
@@ -72,6 +72,8 @@ IF(${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
     ENDFOREACH()
 ENDIF()
 
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${JSON_LIB})
+
 IF (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
     SET(MACOS_FRAMEWORKS 
         "-framework Cocoa" 
@@ -87,7 +89,6 @@ IF (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
         "-framework ForceFeedback"
         "-framework CoreHaptics"
         "-framework Carbon")
-
     TARGET_LINK_LIBRARIES(
         ${PROJECT_NAME}
         PRIVATE
