--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ PROJECT(ChessGame)
 SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
-endif()
+IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+ENDIF()
 
-include(FetchContent)
+INCLUDE(FetchContent)
 
 # Fetch SDL2
 FetchContent_Declare(
@@ -34,8 +34,8 @@ FetchContent_Declare(
     GIT_TAG release-2.8.0
 )
 ### Otherwise you can install those.
-set(SDL2MIXER_VENDORED ON)
-set(SDL2MIXER_OPUS OFF)
+SET(SDL2MIXER_VENDORED ON)
+SET(SDL2MIXER_OPUS OFF)
 FetchContent_MakeAvailable(SDL2_mixer)
 
 # Fetch SDL2_ttf
@@ -55,17 +55,20 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(nlohmann_json)
 
 # Source files
-set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/code")
-file(GLOB_RECURSE MODULES_SOURCES ${SOURCE_DIR}/*.cppm ${SOURCE_DIR}/*.cpp)
-set(SOURCES ${MODULES_SOURCES} "${CMAKE_SOURCE_DIR}/main.cpp")
+SET(SOURCE_DIR "${CMAKE_SOURCE_DIR}/code")
+FILE(GLOB_RECURSE MODULES_SOURCES ${SOURCE_DIR}/*.cpp)
+SET(SOURCES ${MODULES_SOURCES} "${CMAKE_SOURCE_DIR}/main.cpp")
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
 
-target_include_directories(${PROJECT_NAME} PRIVATE
+TARGET_INCLUDE_DIRECTORIES(
+    ${PROJECT_NAME} 
+    PRIVATE
     ${CMAKE_SOURCE_DIR}/code
 )
 
-target_link_libraries(${PROJECT_NAME}
+TARGET_LINK_LIBRARIES(
+    ${PROJECT_NAME}
     PRIVATE
     SDL2::SDL2
     SDL2_image::SDL2_image
@@ -75,32 +78,33 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 # macOS specific frameworks
-if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE
-    "-framework Cocoa"
-    "-framework IOKit"
-    "-framework CoreFoundation"
-    "-framework CoreVideo"
-    "-framework AudioToolbox"
-    "-framework CoreAudio"
-    "-framework AVFoundation"
-    "-framework GameController"
-    "-framework Metal"
-    "-framework Foundation"
-    "-framework ForceFeedback"
-    "-framework CoreHaptics"
-    "-framework Carbon"
-)
-endif()
+IF (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
+    TARGET_LINK_LIBRARIES(
+        ${PROJECT_NAME}
+        PRIVATE
+        "-framework Cocoa"
+        "-framework IOKit"
+        "-framework CoreFoundation"
+        "-framework CoreVideo"
+        "-framework AudioToolbox"
+        "-framework CoreAudio"
+        "-framework AVFoundation"
+        "-framework GameController"
+        "-framework Metal"
+        "-framework Foundation"
+        "-framework ForceFeedback"
+        "-framework CoreHaptics"
+        "-framework Carbon"
+    )
+ENDIF()
 
 # Assets (copy to build directory)
-set(ASSETS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
-set(ASSETS_DEST_DIR "${CMAKE_BINARY_DIR}/assets")
-add_custom_command(
+SET(ASSETS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
+SET(ASSETS_DEST_DIR "${CMAKE_BINARY_DIR}/assets")
+ADD_CUSTOM_COMMAND(
     TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${ASSETS_SOURCE_DIR} ${ASSETS_DEST_DIR}
 )
 
-message(STATUS "C++ standard set to: ${CMAKE_CXX_STANDARD}")
+MESSAGE(STATUS "C++ standard set to: ${CMAKE_CXX_STANDARD}")
